# ai_verification_studio

./: CMakeLists.txt  README.md  build_err.txt  build_log.txt  build_log_debug.txt  build_output.txt  build_output_retry.txt  build_output_utf8.txt  build_raw.txt  compile.py  compile_err.txt  compile_out.txt  diff_chunks.txt  error_log.txt  test.cpp
build3/: CMakeCache.txt
build_corrupted/: .ninja_deps  .ninja_log  build.ninja
build_corrupted/.qt/: QtDeployTargets.cmake
build_corrupted/ai_verification_studio_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_corrupted/ai_verification_studio_autogen/UVLADIE3JM/: moc_LlmClient.cpp  moc_LlmClient.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d
src/: LlmClient.cpp  LlmClient.h  MainWindow.cpp  MainWindow.h  SimulationRunner.cpp  SimulationRunner.h  main.cpp
